# greenswip_robot

./: README.md
greenswip_robot/: CMakeLists.txt  README.md  package.xml  setup.cfg
greenswip_robot/config/: bridge.yaml
greenswip_robot/greenswip_robot/: control_node.py  perception_node.py
greenswip_robot/launch/: greenswip_sim.launch.py  shuffle_objects.launch.py
greenswip_robot/urdf/: ack.urdf.xacro
greenswip_robot/worlds/: shapes.sdf
